[gd_scene load_steps=22 format=3 uid="uid://pxe2ayuvd6t5"]

[ext_resource type="Script" path="res://scripts/blinding_mob.gd" id="1_1gwn5"]
[ext_resource type="Texture2D" uid="uid://owsp6he8i0lh" path="res://art/enemies/Blinding Spider/deah 16x16.png" id="1_qlb6x"]
[ext_resource type="Texture2D" uid="uid://cidqfcyl6w5y6" path="res://art/enemies/Blinding Spider/static idle.png" id="2_t2bt6"]
[ext_resource type="Texture2D" uid="uid://cxwe0risnrxk2" path="res://art/enemies/Blinding Spider/walk 16x16.png" id="3_08ywl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f05vx"]
atlas = ExtResource("1_qlb6x")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cws6"]
atlas = ExtResource("1_qlb6x")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnhlk"]
atlas = ExtResource("1_qlb6x")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoed8"]
atlas = ExtResource("1_qlb6x")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj5td"]
atlas = ExtResource("1_qlb6x")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xu1n"]
atlas = ExtResource("1_qlb6x")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y257e"]
atlas = ExtResource("2_t2bt6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldy26"]
atlas = ExtResource("3_08ywl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdoio"]
atlas = ExtResource("3_08ywl")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqq5p"]
atlas = ExtResource("3_08ywl")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qegat"]
atlas = ExtResource("3_08ywl")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1s2n"]
atlas = ExtResource("3_08ywl")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmqkh"]
atlas = ExtResource("3_08ywl")
region = Rect2(0, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_j3q11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f05vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cws6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnhlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoed8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj5td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xu1n")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y257e")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldy26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdoio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqq5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qegat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1s2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmqkh")
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2bkay"]
radius = 63.5177

[sub_resource type="RectangleShape2D" id="RectangleShape2D_curyl"]
size = Vector2(9, 5.98438)

[sub_resource type="CircleShape2D" id="CircleShape2D_appnc"]
radius = 6.0

[node name="Blinder" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_1gwn5")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -3)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Marker2D"]
position = Vector2(4, -5)
sprite_frames = SubResource("SpriteFrames_j3q11")
animation = &"death"
autoplay = "idle"
frame = 5
frame_progress = 1.0

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0.5, -3.5)
shape = SubResource("CircleShape2D_2bkay")

[node name="ChaseTimer" type="Timer" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -3.00781)
shape = SubResource("RectangleShape2D_curyl")
debug_color = Color(0.7, 0, 0, 0.42)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_appnc")

[connection signal="animation_finished" from="Marker2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
